--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 markdown: kramdown
+future: true
 
 # Build settings
 theme: minima
